--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-blinker==1.4
-dominate==2.2.0
+Beaker==1.8.0
+docopt==0.6.2
 Flask==0.10.1
-Flask-Bootstrap==3.3.5.7
-Flask-Mail==0.9.1
-Flask-Script==2.0.5
 itsdangerous==0.24
 Jinja2==2.8
+louis==2.6.5
+Mako==1.0.4
 MarkupSafe==0.23
-visitor==0.1.2
-Werkzeug==0.11.9
+packaging==16.7
+pacman-mirrors==2.0
+pbr==1.8.1
+pygobject==3.20.0
+pyparsing==2.1.1
+pyxdg==0.25
+PyYAML==3.11
+six==1.10.0
+stevedore==1.9.0
+team==1.0
+udiskie==1.4.8
+virtualenv==13.1.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+Werkzeug==0.11.4
